--- a/webroot/scss/builder.scss
+++ b/webroot/scss/builder.scss
@@ -473,6 +473,8 @@ div.field_item_sidebar {
             height: 100%;
         }
 
+        div.minicolors_before.active { &::after { @include visible(false); } }
+
         input.minicolors-input {
             width: calc(100% - 33px);
             text-transform: uppercase;
@@ -494,7 +496,7 @@ div.field_item_sidebar {
             @include translateY(-50%);
         }
 
-        div.minicolors-panel { top: 23px; left: 5px; }
+        div.minicolors-panel { top: 100%; left: 5px; }
     }
 
     &#height, &#font-size, &#line-height {
@@ -557,6 +559,7 @@ div.field_item_sidebar {
                 border: $primaryBorder;
                 i { font-size: 10px; color:$primaryTextColor; @include inline-block(middle); }
                 @include single-transition(background-color, 0.3s, ease, 0s);
+                @include noselect();
                 &:hover { background-color: transparent; i { color: #000; } }
                 &.active { background-color: rgbaExpress(black, 0.5); i { color: #fff; } }
 
@@ -590,11 +593,11 @@ div.field_item_sidebar {
                 & > div.flipper {
                     width: 100%;
                     height: 100%;
-                    z-index: 0;
-                    width: 100%;
                     position: relative;
                     @include single-transition(transform, 0.3s, ease, 0s);
                     @include transform-style(preserve-3d);
+
+                    &.active { @include rotateX(-180deg); }
 
                     & > div.flipper_front, & > div.flipper_back {
                             @include single-transition(transform, 0.3s, ease, 0s);
